<resources>
    <string name="app_name">Showtime</string>
    <string name="NO_INTERNET_CONNECTION">There is not internet connection. Please try later</string>
    <string name="ERROR_LOADING_DATA">There has been an error loading data</string>
    <string name="LOCATION_IS_REQUIRED">Your location is needed to show you your nearest events</string>
    <string name="tv_events_label">Events near</string>
    <string name="event_image">Event image</string>
    <string name="open_venue_location">Show location</string>
    <string name="event_item_name_label">Name</string>
    <string name="tv_events_app">Showtime</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="event_detail_name_label">Name</string>
    <string name="event_detail_date_label">Date</string>
    <string name="event_detail_venue_label">Venue</string>
    <string name="event_detail_segment_label">Segment</string>
    <string name="event_detail_genre_label">Genre</string>
    <string name="event_detail_subgenre_label">Subgenre</string>
    <string name="venue_label">Venue</string>
    <string name="ERROR_CONTACTING_SERVER">There has been an error while connecting to the server. Error code %d message %s</string>
    <string name="ERROR_NO_EVENTS">Sorry, we have not retrieved any event</string>
    <string name="appwidget_title">Events around</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_view_message">Please open the app to load events.</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
