<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ImageView
        android:id="@+id/event_detail_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/event_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/event_detail_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_name_label"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/event_detail_image"/>

    <TextView
        android:id="@+id/event_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_detail_name_label"
        app:layout_constraintTop_toBottomOf="@id/event_detail_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/event_detail_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_date_label"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/event_detail_name_label"/>

    <TextView
        android:id="@+id/event_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_detail_date_label"
        app:layout_constraintTop_toBottomOf="@id/event_detail_name_label"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/event_detail_venue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_venue_label"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/event_detail_date_label"/>

    <TextView
        android:id="@+id/event_detail_venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/event_detail_venue"
        app:layout_constraintTop_toBottomOf="@id/event_detail_date_label"
        app:layout_constraintEnd_toEndOf="parent"/>




</android.support.constraint.ConstraintLayout>