<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Guideline
        android:id="@+id/event_item_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/event_item_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/event_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_item_name_label"
        style="@style/MainLabel"
        app:layout_constraintStart_toStartOf="@id/event_item_guideline"
        app:layout_constraintTop_toBottomOf="@id/event_item_image"
        />

    <TextView
        android:id="@+id/event_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Bananarama in concert!!"
        style="@style/MainValue"
        app:layout_constraintBaseline_toBaselineOf="@id/event_item_name_label"
        app:layout_constraintStart_toEndOf="@id/event_item_name_label"
        app:layout_constraintTop_toBottomOf="@id/event_item_image"
        />

    <TextView
        android:id="@+id/event_item_venue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue_label"
        style="@style/MainLabel"
        app:layout_constraintStart_toStartOf="@id/event_item_guideline"
        app:layout_constraintTop_toBottomOf="@id/event_item_name_label"/>

    <TextView
        android:id="@+id/event_item_venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MainValue"
        app:layout_constraintBaseline_toBaselineOf="@id/event_item_venue_label"
        app:layout_constraintStart_toEndOf="@id/event_item_venue_label"
        app:layout_constraintTop_toBottomOf="@id/event_item_name_label"/>


</android.support.constraint.ConstraintLayout>